# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 18:34:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-76

    Summary:
      Fixed eof problems
    Revision:
      missingh--head--0.5--patch-76


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 17:26:26 GMT	John Goerzen <jgoerzen@complete.org>	patch-75

    Summary:
      Removed need for RunParser.hs
    Revision:
      missingh--head--0.5--patch-75


    removed files:
     libsrc/MissingH/ConfigParser/RunParser.hs

    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     testsrc/ConfigParser/Parsertest.hs testsrc/Tests.hs

    renamed files:
     testsrc/ConfigParser/RunParsertest.hs
       ==> testsrc/ConfigParser/Parsertest.hs


2004-11-18 17:17:15 GMT	John Goerzen <jgoerzen@complete.org>	patch-74

    Summary:
      Basic parser tests work
    Revision:
      missingh--head--0.5--patch-74


    modified files:
     ChangeLog testsrc/ConfigParser/RunParsertest.hs


2004-11-18 17:11:30 GMT	John Goerzen <jgoerzen@complete.org>	patch-73

    Summary:
      Fixed up loken parser
    Revision:
      missingh--head--0.5--patch-73


    new files:
     testsrc/ConfigParser/.arch-ids/=id
     testsrc/ConfigParser/RunParsertest.hs

    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs
     libsrc/MissingH/ConfigParser/RunParser.hs testsrc/Tests.hs

    new directories:
     testsrc/ConfigParser testsrc/ConfigParser/.arch-ids


2004-11-18 16:53:48 GMT	John Goerzen <jgoerzen@complete.org>	patch-72

    Summary:
      Added parser running tool
    Revision:
      missingh--head--0.5--patch-72


    new files:
     libsrc/MissingH/ConfigParser/RunParser.hs
